# mimemapper

./: .gitignore  README.md  __init__.py  lib.py  mime_to_ext.json  pyproject.toml  scraper.py  tests.py
src/: lib.py
src/mimemapper/: ext_to_mime.json  mime_to_ext.json
