# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimemapper"
version = "0.4.0"
description = "Convert between MIME types and extensions - straight from the IANA registry"
readme = "README.md"
authors = [{ name = "Safwan Samsudeen", email = "safwansamsudeen.c@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["mime", "file", "extensions"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/safwansamsudeen/mimemapper"